testing with updated build with initial postgrest_uploader

--- a/SD/index.htm
+++ b/SD/index.htm
@@ -561,14 +561,14 @@
             dp: 1
         }];
         // configuration files
-        var configFileURL = "/config.txt";
-        var configNewURL = "/config+1.txt";
-        var burdenFileURL = "/esp_spiffs/config/device/burden.txt";
-        var configTablesURL = "/tables.txt";
+        var configFileURL = "http://192.168.0.217/config.txt";
+        var configNewURL = "http://192.168.0.217/config+1.txt";
+        var burdenFileURL = "http://192.168.0.217/esp_spiffs/config/device/burden.txt";
+        var configTablesURL = "http://192.168.0.217/tables.txt";
         var editURL = "edit.htm";
         var graphURL = "graph.htm";
         var graph2URL = "graph2.htm";
-        var msgsFileURL = "/iotawatt/iotamsgs.txt?textpos=-10000";
+        var msgsFileURL = "http://192.168.0.217/iotawatt/iotamsgs.txt?textpos=-10000";
         var currentBody = [];
         var configSHA256;
         var noConfig = true;
